change regis path

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         <button type="submit" value="Login">login</button>
         <p>
             New member?
-            <a href="file:///C:/Users/Nattamate%20Earth/cs369_firstjob/index0.1.html">Register</a> here.
+            <a href="D:\CS369\Assignment1\Sweetpotato\register.html">Register</a> here.
         </p>
     </div>
 </body>
