add new header and link page like prototype

--- a/register_form_normal.html
+++ b/register_form_normal.html
@@ -3,9 +3,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/register_form_normal.css">
+    <title>REGISTER</title>
+    <link rel="icon" type="" href="/img/sweetpotato.png">
 </head>
 <body>
+    <div class="Sweetpotato-header">
+        <div style="display: flex;">
+          <a href="/main-shop-normal.html">
+            <img src="/img/sweetpotato.png" alt="" width="100 px" height="100 px">
+          </a>
+          <h1>Sweet Potato</h1>  
+        </div>          
+        <div class="Sweetpotao-heder-right">
+          <img src="/img/cart.png" width="100 px" height="100 px">
+          <a href="/login_normal.html">
+            <img src="/img/account.png" width="100 px" height="100 px">
+          </a>
+        </div>
+      </div>
     <h1>Register</h1>
 
     <label for="uname">username: </label>
