--- a/login_normal.html
+++ b/login_normal.html
@@ -3,23 +3,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/login_normal.css">
+    <link rel="stylesheet" href="login_normal.css">
     <title>LOGIN</title>
-    <link rel="icon" type="" href="/img/sweetpotato.png">
+    <link rel="icon" type="" href="img/sweetpotato.png">
     
 </head>
 <body>
     <div class="Sweetpotato-header">
         <div style="display: flex;">
-          <a href="/main-shop-normal.html">
-            <img src="/img/sweetpotato.png" alt="" width="100 px" height="100 px">
+          <a href="main-shop-normal.html">
+            <img src="img/sweetpotato.png" alt="" width="100 px" height="100 px">
           </a>
           <h1>Sweet Potato</h1>  
         </div>          
         <div class="Sweetpotao-heder-right">
-          <img src="/img/cart.png" width="100 px" height="100 px">
-          <a href="/login_normal.html">
-            <img src="/img/account.png" width="100 px" height="100 px">
+          <img src="img/cart.png" width="100 px" height="100 px">
+          <a href="login_normal.html">
+            <img src="img/account.png" width="100 px" height="100 px">
           </a>
         </div>
       </div>
@@ -34,7 +34,7 @@
         <button type="submit" value="Login">login</button>
         <p>
             New member?
-            <a href="/register_form_normal.html">Register</a> here.
+            <a href="D:\CS369\Sweetpotato\register_form_normal.html">Register</a> here.
         </p>
     </div>
 </body>
