--- a/main-shop-normal.html
+++ b/main-shop-normal.html
@@ -5,21 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SWEET POTATO</title>
-  <link rel="icon" type="" href="/img/sweetpotato.png">
-  <link rel="stylesheet" href="/main-shop-normal.css">
+  <link rel="icon" type="" href="img/sweetpotato.png">
+  <link rel="stylesheet" href="main-shop-normal.css">
 </head>
 <body>  
       <div class="Sweetpotato-header">
         <div style="display: flex;">
-          <a href="/main-shop-normal.html">
-            <img src="/img/sweetpotato.png" alt="" width="100 px" height="100 px">
+          <a href="main-shop-normal.html">
+            <img src="img/sweetpotato.png" alt="" width="100 px" height="100 px">
           </a>
           <h1>Sweet Potato</h1>  
         </div>          
         <div class="Sweetpotao-heder-right">
-          <img src="/img/cart.png" width="100 px" height="100 px">
-          <a href="/login_normal.html">
-            <img src="/img/account.png" width="100 px" height="100 px">
+          <img src="img/cart.png" width="100 px" height="100 px">
+          <a href="login_normal.html">
+            <img src="img/account.png" width="100 px" height="100 px">
           </a>
         </div>
       </div>
