--- a/register_form_normal.html
+++ b/register_form_normal.html
@@ -3,44 +3,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/register_form_normal.css">
+    <link rel="stylesheet" href="register_form_normal.css">
     <title>REGISTER</title>
-    <link rel="icon" type="" href="/img/sweetpotato.png">
+    <link rel="icon" type="" href="img/sweetpotato.png">
 </head>
 <body>
     <div class="Sweetpotato-header">
         <div style="display: flex;">
-          <a href="/main-shop-normal.html">
-            <img src="/img/sweetpotato.png" alt="" width="100 px" height="100 px">
+          <a href="main-shop-normal.html">
+            <img src="img/sweetpotato.png" alt="" width="100 px" height="100 px">
           </a>
           <h1>Sweet Potato</h1>  
         </div>          
         <div class="Sweetpotao-heder-right">
-          <img src="/img/cart.png" width="100 px" height="100 px">
-          <a href="/login_normal.html">
-            <img src="/img/account.png" width="100 px" height="100 px">
+          <img src="img/cart.png" width="100 px" height="100 px">
+          <a href="login_normal.html">
+            <img src="img/account.png" width="100 px" height="100 px">
           </a>
         </div>
       </div>
-    <h1>Register</h1>
+    <h1 align ='center'> Create your Sweet Potato Account</h1>
+    <hr>
+    
 
     <label for="uname">username: </label>
     <input type="text" id="uname" name=" uname"><br>
 
-    <label for="pass">password: </label>
-    <input type="password" id="pass" name="pass"><br>
-
-    <label for="pass">Confirm password: </label>
-    <input type="password" id="pass" name="pass"><br>
-
     <label for="email">email: </label>
     <input type="email" id="email" name=" email"><br>
 
-    <label for="phone">phone number: </label>
-    <input type="tel" id="phone" name=" phone"><br>
-
     <label for="bdate">date of birth: </label>
     <input type="date" id="bdate" name="bdate"><br>
+
+    <label for="pass">password: </label>
+    <input type="password" id="pass" name="pass">
+
+    <label for="cpass">Confirm password: </label>
+    <input type="password" id="cpass" name="cpass"><br>
+
+    <label for="uimg">Select image: </label>
+    <input type="file" id="uimg" name="uimg" placeholder="choose file"><br>
     
 </body>
 </html>
