--- a/register_form_normal.html
+++ b/register_form_normal.html
@@ -1,48 +1,69 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="register_form_normal.css">
-    <title>REGISTER</title>
-    <link rel="icon" type="" href="img/sweetpotato.png">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link rel="stylesheet" href="/register_form_normal.css"> -->
+  <link rel="stylesheet" type="text/css" href="stylesheet_ryu.css">
+  <title>REGISTER</title>
+  <link rel="icon" type="" href="/img/sweetpotato.png">
 </head>
+
 <body>
-    <div class="Sweetpotato-header">
-        <div style="display: flex;">
-          <a href="main-shop-normal.html">
-            <img src="img/sweetpotato.png" alt="" width="100 px" height="100 px">
-          </a>
-          <h1>Sweet Potato</h1>  
-        </div>          
-        <div class="Sweetpotao-heder-right">
-          <img src="img/cart.png" width="100 px" height="100 px">
-          <a href="login_normal.html">
-            <img src="img/account.png" width="100 px" height="100 px">
-          </a>
-        </div>
-      </div>
-    <h1 align ='center'> Create your Sweet Potato Account</h1>
-    <hr>
-    
+  <section class="header_section">
 
-    <label for="uname">username: </label>
-    <input type="text" id="uname" name=" uname"><br>
+  </section>
+  <section class="main_section">
+    <section class="main_section_display">
+      <section class="display_section register_section">
+        <section class="title_section">
+          <div class="title_text">Create your Sweet Potato Account</div>
+        </section>
+        <section class="body_section">
+          <div class="flex_container">
+            <div class="left_container">
+              <div class="label_text">
+                Username:
+              </div>
+              <section class="input_section">
+                <input class="input_group" placeholder="Enter your username">
+              </section>
+              <div class="label_text">
+                E-Mail:
+              </div>
+              <section class="input_section">
+                <input class="input_group" placeholder="Enter your email">
+              </section>
+              <div class="label_text">
+                Date Of Birth:
+              </div>
+              <section class="input_section">
+                <input class="input_group" placeholder="DD / MM / YY">
+              </section>
 
-    <label for="email">email: </label>
-    <input type="email" id="email" name=" email"><br>
+            </div>
+            <div class="right_container">
+              <label for="email">email: </label>
+              <input type="email" id="email" name=" email"><br>
 
-    <label for="bdate">date of birth: </label>
-    <input type="date" id="bdate" name="bdate"><br>
+              <label for="phone">phone number: </label>
+              <input type="tel" id="phone" name=" phone"><br>
 
-    <label for="pass">password: </label>
-    <input type="password" id="pass" name="pass">
+              <label for="bdate">date of birth: </label>
+              <input type="date" id="bdate" name="bdate"><br>
+            </div>
+          </div>
 
-    <label for="cpass">Confirm password: </label>
-    <input type="password" id="cpass" name="cpass"><br>
+        </section>
 
-    <label for="uimg">Select image: </label>
-    <input type="file" id="uimg" name="uimg" placeholder="choose file"><br>
-    
+      </section>
+
+    </section>
+
+  </section>
+
 </body>
+
 </html>
