--- a/register_form_normal.html
+++ b/register_form_normal.html
@@ -25,24 +25,24 @@
     <h1 align ='center'> Create your Sweet Potato Account</h1>
     <hr>
     
+   <div class="container">
+      <label for="uname">username: </label>
+      <input type="text" id="uname" name=" uname"><br>
 
-    <label for="uname">username: </label>
-    <input type="text" id="uname" name=" uname"><br>
+      <label for="email">email: </label>
+      <input type="email" id="email" name=" email"><br>
 
-    <label for="email">email: </label>
-    <input type="email" id="email" name=" email"><br>
+      <label for="bdate">date of birth: </label>
+      <input type="date" id="bdate" name="bdate"><br>
 
-    <label for="bdate">date of birth: </label>
-    <input type="date" id="bdate" name="bdate"><br>
+      <label for="pass">password: </label>
+      <input type="password" id="pass" name="pass">
 
-    <label for="pass">password: </label>
-    <input type="password" id="pass" name="pass">
+      <label for="cpass">Confirm password: </label>
+      <input type="password" id="cpass" name="cpass"><br>
 
-    <label for="cpass">Confirm password: </label>
-    <input type="password" id="cpass" name="cpass"><br>
-
-    <label for="uimg">Select image: </label>
-    <input type="file" id="uimg" name="uimg" placeholder="choose file"><br>
-    
+      <label for="uimg">Select image: </label>
+      <input type="file" id="uimg" name="uimg" placeholder="choose file"><br>
+   </div>
 </body>
 </html>
