--- a/login_normal.html
+++ b/login_normal.html
@@ -34,8 +34,9 @@
         <button type="submit" value="Login">login</button>
         <p>
             New member?
-            <a href="D:\CS369\Sweetpotato\register_form_normal.html">Register</a> here.
+            <a href="register_form_normal.html">Register</a> here.
         </p>
     </div>
+    <div class="Sweetpotato-footer"> </div>
 </body>
 </html>
