--- a/register_form_normal.html
+++ b/register_form_normal.html
@@ -44,5 +44,6 @@
       <label for="uimg">Select image: </label>
       <input type="file" id="uimg" name="uimg" placeholder="choose file"><br>
    </div>
+   <div class="Sweetpotato-footer"> </div>
 </body>
 </html>
