--- a/register_form_normal.html
+++ b/register_form_normal.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="/register_form_normal.css"> -->
-  <link rel="stylesheet" type="text/css" href="stylesheet_ryu.css">
+  <link rel="stylesheet" type="text/css" href="register_form_normal.css">
   <title>REGISTER</title>
   <link rel="icon" type="" href="/img/sweetpotato.png">
 </head>
@@ -29,25 +29,26 @@
     <h1 align ='center'> Create your Sweet Potato Account</h1>
     <hr>
     
+    <div class="container">
+      <label for="uname">username: </label>
+      <input type="text" id="uname" name=" uname"><br>
 
-    <label for="uname">username: </label>
-    <input type="text" id="uname" name=" uname"><br>
+      <label for="email">email: </label>
+      <input type="email" id="email" name=" email"><br>
 
-    <label for="email">email: </label>
-    <input type="email" id="email" name=" email"><br>
+      <label for="bdate">date of birth: </label>
+      <input type="date" id="bdate" name="bdate"><br>
 
-    <label for="bdate">date of birth: </label>
-    <input type="date" id="bdate" name="bdate"><br>
+      <label for="pass">password: </label>
+      <input type="password" id="pass" name="pass">
 
-    <label for="pass">password: </label>
-    <input type="password" id="pass" name="pass">
+      <label for="cpass">Confirm password: </label>
+      <input type="password" id="cpass" name="cpass"><br>
 
-    <label for="cpass">Confirm password: </label>
-    <input type="password" id="cpass" name="cpass"><br>
-
-    <label for="uimg">Select image: </label>
-    <input type="file" id="uimg" name="uimg" placeholder="choose file"><br>
-    
+      <label for="uimg">Select image: </label>
+      <input type="file" id="uimg" name="uimg" placeholder="choose file"><br>
+    </div>
+    <div class="Sweetpotato-footer"></div>
 </body>
 
 </html>
