--- a/main-shop-normal.html
+++ b/main-shop-normal.html
@@ -9,19 +9,76 @@
   <link rel="stylesheet" href="main-shop-normal.css">
 </head>
 <body>  
-      <div class="Sweetpotato-header">
-        <div style="display: flex;">
-          <a href="main-shop-normal.html">
-            <img src="img/sweetpotato.png" alt="" width="100 px" height="100 px">
-          </a>
-          <h1>Sweet Potato</h1>  
-        </div>          
-        <div class="Sweetpotao-heder-right">
-          <img src="img/cart.png" width="100 px" height="100 px">
-          <a href="login_normal.html">
-            <img src="img/account.png" width="100 px" height="100 px">
-          </a>
+      <div class="container">
+        <!-- header section-->
+        <div class="Sweetpotato-header">
+          <div style="display: flex;">
+           <a href="main-shop-normal.html">
+              <img src="img/sweetpotato.png" alt="" width="100 px" height="100 px">
+            </a>
+            <h1>Sweet Potato</h1>  
+          </div>          
+          <div class="Sweetpotao-heder-right">
+           <img src="img/cart.png" width="100 px" height="100 px">
+           <a href="login_normal.html">
+             <img src="img/account.png" width="100 px" height="100 px">
+           </a>
+          </div>
+        </div>
+        <!-- content section-->
+        <div class="container-grid">
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-item">
+              <img src="/img/mr.potato.png"alt="potato">
+            </div>
+          </div>
+        </div> 
+          
+        <!-- footer section-->
+        <div class="Sweetpotato-footer">
+
         </div>
       </div>
+        
 </body>
 </html>
