add card in main

--- a/main-shop-normal.html
+++ b/main-shop-normal.html
@@ -29,47 +29,47 @@
         <div class="container-grid">
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
           <div class="card">
             <div class="img-item">
-              <img src="/img/mr.potato.png"alt="potato">
+              <img src="img/mr.potato.png"alt="potato">
             </div>
           </div>
         </div> 
