--- a/login_normal.html
+++ b/login_normal.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="/register_form_normal.css"> -->
-  <link rel="stylesheet" type="text/css" href="css/stylesheet_ryu.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet_ryu.css">
   <title>REGISTER</title>
   <link rel="icon" type="" href="/img/sweetpotato.png">
 </head>
